@@ -1,7 +1,12 @@
+2011-09-30  Tomas Mraz  <tm@t8m.info>
+
+	* doc/man/pam.conf-syntax.xml: Improve documentation of the
+	sufficient and requisite control values. (Red Hat Bug #742413)
+
 2011-08-25  Tomas Mraz  <tm@t8m.info>
 
 	* modules/pam_access/pam_access.c (user_match): Fix the split
-	  on @ in the user field. (Red Hat Bug #732081)
+	on @ in the user field. (Red Hat Bug #732081)
 
 	* modules/pam_loginuid/pam_loginuid.c: Correct the FSF address.
 
